--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "h-treeview",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build-lib": "ng build h-treeView"
   },
   "private": true,
   "dependencies": {
@@ -38,5 +39,20 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "ng-packagr": "^14.2.0",
     "typescript": "~4.7.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 14.2.3.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/huytran95qn/h-treeView.git"
+  },
+  "keywords": [
+    "h-treeView"
+  ],
+  "author": "HuyTran",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/huytran95qn/h-treeView/issues"
+  },
+  "homepage": "https://github.com/huytran95qn/h-treeView#readme"
 }
